--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,6 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-# Add this to point Gradle to Java 17:
-org.gradle.java.home=/opt/homebrew/opt/openjdk@17
+## Add this to point Gradle to Java 17:
+#org.gradle.java.home=/opt/homebrew/opt/openjdk@17
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/temurin-17.jdk/Contents/Home
